# Api_Gateway/docs/swagger.json
@@ -1225,6 +1225,11 @@
         },
         "/transaction/income": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Get the count of income transactions and the total amount received.",
                 "consumes": [
                     "application/json"
@@ -1269,6 +1274,11 @@
         },
         "/transaction/spending": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Get the count of spending transactions and the total amount spent.",
                 "consumes": [
                     "application/json"
